tests/compile_fail/declare_scheduler_lowercase_const_name.rs
use ktstr::declare_scheduler;

declare_scheduler!(my_sched, {
    name = "my_sched",
    binary = "scx_my_sched",
});

fn main() {}
